modificaciones en estilos

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -80,7 +80,7 @@ header nav div ul li:hover {
   align-items: center;
 }
 
-#toggler, .contenedor_burgerMenu, .burger_menu {
+#toggler, .contenedor_burgerMenu, .burger_menu, .center {
   display: none;
 }
 
@@ -130,6 +130,39 @@ header nav div ul li:hover {
 @media screen and (max-width: 600px) {
   nav {
     justify-content: space-between;
+  }
+
+  .center {
+    display: block;
+    top: 50%;
+    right: 10%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 40px;
+  }
+
+  .center:before,
+.center:after,
+.center div {
+    background: #57A9DA;
+    content: "";
+    display: block;
+    height: 6px;
+    border-radius: 3px;
+    margin: 7px 0;
+    transition: 0.5s;
+  }
+
+  .center:hover:before {
+    transform: translateY(12px) rotate(135deg);
+  }
+
+  .center:hover:after {
+    transform: translateY(-12px) rotate(-135deg);
+  }
+
+  .center:hover div {
+    transform: scale(0);
   }
 
   .contenedor_header_secciones {
