--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -27,3 +27,17 @@ $logo-width:calc(5em + 5vw);
     align-content: center;
     align-items: center;
 };
+//animaciones
+@keyframes scroll {
+    0%, 20% {
+    transform: translateY(0) scaleY(1);
+    }
+    10% {
+        opacity: 1;
+        }
+    100% {
+        transform: translateY(36px) scaleY(2);
+        opacity: 0.01;
+    }
+}
+
