--- a/CSS/main.css
+++ b/CSS/main.css
@@ -144,7 +144,7 @@ header nav div ul li:hover {
   position: absolute;
   width: 100%;
   min-height: 100vh;
-  background: black;
+  background: #202124;
   z-index: 99;
 }
 
@@ -197,7 +197,6 @@ header nav div ul li:hover {
 .contenedor_presentacion {
   width: 100%;
   background-color: inherit;
-  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -207,6 +206,8 @@ header nav div ul li:hover {
 .container_textAnimation {
   padding: 2em;
   width: 100%;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .textAnimation {
@@ -215,6 +216,22 @@ header nav div ul li:hover {
   font-family: "Fugaz One", cursive;
   font-size: 100px;
   font-weight: 300;
+}
+
+.contenedor_somosImpulsar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  padding: 2em;
+}
+
+.somosImpulsar_p {
+  width: 80%;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  text-align: justify;
 }
 
 .contenedor_animationScroll {
@@ -283,6 +300,7 @@ header nav div ul li:hover {
 .texto_copyright {
   color: #E0E0E0;
   font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: -1.9em;
 }
 
 @media screen and (max-width: 600px) {
