--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -63,7 +63,7 @@ header{
     position: absolute;
     width: 100%;
     min-height: 100vh;
-    background: black;
+    background: $color_gris_oscuro;
     z-index: 99;
 }
 .preload_cerrar{
@@ -108,7 +108,6 @@ header{
 .contenedor_presentacion{
     width: 100%;
     background-color: inherit;
-    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -118,6 +117,8 @@ header{
 .container_textAnimation{
     padding: 2em;
     width: 100%;
+    display: flex;
+    justify-content: flex-start;
 }
 .textAnimation{
     stroke: $color_celeste_oscuro;
@@ -125,6 +126,21 @@ header{
     font-family: $letra__principal;
     font-size: 100px;
     font-weight: 300;
+}
+//somos impulsar
+.contenedor_somosImpulsar{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding: 2em;
+}
+.somosImpulsar_p{
+    width: 80%;
+    color: $color_gris_claro;
+    font-family: $letra__secundaria;
+    font-size: 20px;
+    text-align: justify;
 }
 //animacion-scroll
 .contenedor_animationScroll{
@@ -157,6 +173,7 @@ header{
     color: $color_celeste_oscuro;
     font-size: 9px;
 }
+
 //footer
 .index_footer{
     width: 100vw;
@@ -177,7 +194,6 @@ header{
     flex-wrap: nowrap;
     justify-content: space-evenly;
     align-items: center;
-
     padding: 1em;
 }
 .logo_footer{
@@ -186,6 +202,7 @@ header{
 .texto_copyright{
     color: $color_gris_claro;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: -1.9em;
 }
 @media screen and (max-width: 600px) {
     nav{
@@ -253,4 +270,3 @@ header{
         max-height: 100%;
     }
 }
-
