--- a/CSS/main.css
+++ b/CSS/main.css
@@ -113,6 +113,10 @@ body {
   display: none;
 }
 
+.navbar {
+  flex-wrap: nowrap;
+}
+
 header {
   width: 100vw;
   height: 2%;
@@ -131,6 +135,7 @@ header nav {
   justify-content: space-evenly;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  width: 100%;
 }
 header nav div ul {
   width: 70%;
@@ -234,6 +239,32 @@ header nav div ul li:hover {
 .presentacion_h1 {
   color: #57A9DA;
   width: 80%;
+}
+
+.contenedor_boton_conoceMas {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 50%;
+}
+
+.boton_ConoceMas {
+  color: #57A9DA;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 1em;
+  padding: 1em;
+  background-color: #E0E0E0;
+  color: #57A9DA;
+  font-weight: bold;
+}
+.boton_ConoceMas:hover {
+  background-color: #57A9DA;
+  color: #E0E0E0;
+}
+
+.section_servicios {
+  display: none;
 }
 
 .contenedor_somosImpulsar {
@@ -346,7 +377,50 @@ header nav div ul li:hover {
   margin-bottom: -1.9em;
 }
 
-@media screen and (max-width: 600px) {
+footer {
+  background-color: #202124;
+}
+footer hr {
+  color: #E0E0E0;
+}
+footer h5 {
+  color: #E0E0E0;
+}
+footer a {
+  text-decoration: none;
+  color: #E0E0E0;
+}
+footer a:hover {
+  color: #57A9DA;
+}
+footer p {
+  color: #E0E0E0;
+}
+footer p:hover {
+  color: #57A9DA;
+}
+
+.footer__logo {
+  width: calc(5em + 5vw);
+  height: 100%;
+  margin-bottom: 1em;
+}
+
+.socialMedia {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.socialMedia_anchord {
+  width: calc(1.5em + 1.5vw);
+  height: calc(1.5em + 1.5vh);
+  margin-right: 0.4em;
+  margin-bottom: 0.3em;
+}
+
+@media screen and (max-width: 900px) {
   nav {
     justify-content: space-between;
   }
@@ -356,7 +430,7 @@ header nav div ul li:hover {
     top: 50%;
     right: 10%;
     transform: translate(-50%, -50%);
-    position: relative;
+    position: absolute;
     width: 40px;
   }
 
@@ -398,10 +472,6 @@ header nav div ul li:hover {
     padding: 20px;
   }
 
-  .navbar {
-    flex-wrap: wrap;
-  }
-
   .contenedor_burgerMenu {
     display: inline-flex;
     cursor: pointer;
@@ -422,6 +492,33 @@ header nav div ul li:hover {
 
   #toggler:checked ~ .contenedor_header_secciones {
     max-height: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  /*Footer Media +768*/
+  .footer__logo {
+    width: calc(8em + 8vw);
+    height: 100%;
+  }
+
+  .socialMedia_anchord img {
+    width: calc(1em + 1vw);
+    height: calc(1.2em + 1.2vh);
+    margin-right: 0.2em;
+  }
+
+  /*CIerra Footer Media +768*/
+}
+@media screen and (min-width: 1200px) {
+  .calculadora__contenedorRespuesta {
+    width: 59%;
+  }
+
+  /*Footer +1200*/
+  .socialMedia_anchord img {
+    width: calc(1.5em + 1.5vw);
+    height: calc(2em + 2vh);
+    margin-right: 0.4em;
   }
 }
 
