--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -18,6 +18,9 @@ body{
 .header_hidden{
     display: none;
 }
+.navbar{
+    flex-wrap: nowrap;
+}
 header{
     width: 100vw;
     height: 2%;
@@ -35,6 +38,7 @@ header{
         justify-content: space-evenly;
         font-family: $letra__secundaria;
         font-weight: bold;
+        width: 100%;
         div{
             ul{
                 width: 70%;
@@ -101,6 +105,7 @@ header{
 #toggler, .contenedor_burgerMenu, .burger_menu, .center{
     display: none;
 }
+
 //Abre main 
 .main{
     width: 100vw;
@@ -131,6 +136,31 @@ header{
     color: $color_celeste_oscuro;
     width: 80%;
 }
+.contenedor_boton_conoceMas{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 50%;
+}
+.boton_ConoceMas{
+    color: $color_celeste_oscuro;
+    text-align: center;
+    font-family: $letra__secundaria;
+    margin: 1em;
+    padding: 1em;
+    background-color: $color_gris_claro;
+    color: $color_celeste_oscuro;
+    font-weight: bold;
+    &:hover{
+        background-color: $color_celeste_oscuro;
+        color: $color_gris_claro; 
+    }
+}
+//servicios
+.section_servicios{
+    display: none;
+}
+
 //somos impulsar
 .contenedor_somosImpulsar{
     display: flex;
@@ -188,6 +218,7 @@ header{
     @include secciones;
 }
 //footer
+//pa eliminar de aca
 .index_footer{
     width: 100vw;
     height: 18%;
@@ -209,15 +240,56 @@ header{
     align-items: center;
     padding: 1em;
 }
+
 .logo_footer{
     width: $logo-width
 }
+
 .texto_copyright{
     color: $color_gris_claro;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: -1.9em;
+} //hasta aca
+footer{
+    background-color: $color_gris_oscuro;
+    hr{
+        color: $color_gris_claro;
+    }
+    h5{
+        color: $color_gris_claro;
+    }
+    a{
+        text-decoration: none;
+        color: $color_gris_claro;
+    }
+    a:hover{
+        color: $color_celeste_oscuro;
+    }
+    p{
+        color: $color_gris_claro;
+    }
+    p:hover{
+        color: $color_celeste_oscuro;
+    }
 }
-@media screen and (max-width: 600px) {
+.footer__logo{
+    width: calc(5em + 5vw);
+    height: 100%;
+    margin-bottom: 1em;
+}
+.socialMedia{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.socialMedia_anchord{
+    width: calc(1.5em + 1.5vw);
+    height: calc(1.5em + 1.5vh);
+    margin-right: .4em;
+    margin-bottom: .3em;
+}
+@media screen and (max-width: 900px) {
     nav{
         justify-content: space-between;
     }
@@ -226,7 +298,7 @@ header{
         top: 50%;
         right: 10%;
         transform: translate(-50%, -50%);
-        position: relative;
+        position: absolute;
         width: 40px;
     }    
     .center:before,
@@ -261,9 +333,6 @@ header{
         align-items: center;
         padding: 20px;
     }
-    .navbar{
-        flex-wrap: wrap;
-    }
     .contenedor_burgerMenu{
         display: inline-flex;
         cursor: pointer;
@@ -282,4 +351,28 @@ header{
     #toggler:checked ~ .contenedor_header_secciones{
         max-height: 100%;
     }
+}
+@media screen and (min-width: 768px){
+    /*Footer Media +768*/ 
+    .footer__logo{
+        width: calc(8em + 8vw);
+        height: 100%;
+    }
+    .socialMedia_anchord img{
+        width: calc(1em + 1vw);
+        height: calc(1.2em + 1.2vh);
+        margin-right: .2em;
+    }
+    /*CIerra Footer Media +768*/
+}
+@media screen and (min-width: 1200px){
+    .calculadora__contenedorRespuesta{
+        width: 59%;
+    }
+    /*Footer +1200*/
+    .socialMedia_anchord img{
+        width: calc(1.5em + 1.5vw);
+        height: calc(2em + 2vh);
+        margin-right: .4em;
+    } 
 }
