--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Permanent+Marker");
 @keyframes scroll {
   0%, 20% {
     transform: translateY(0) scaleY(1);
@@ -11,89 +10,28 @@
     opacity: 0.01;
   }
 }
-.container_textAnimation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.container_textAnimation svg {
-  max-width: 45rem;
-  width: 100%;
-  height: auto;
-  fill: #57A9DA;
-  stroke: #202124;
-  stroke-width: 4;
-}
-.container_textAnimation svg tspan > tspan {
-  stroke-dasharray: 1500;
-  stroke-dashoffset: -1500;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(1) {
-  animation: draw 300ms 150ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(2) {
-  animation: draw 300ms 300ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(3) {
-  animation: draw 300ms 450ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(4) {
-  animation: draw 300ms 600ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(5) {
-  animation: draw 300ms 750ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(6) {
-  animation: draw 300ms 900ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(7) {
-  animation: draw 300ms 1050ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(8) {
-  animation: draw 300ms 1200ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(9) {
-  animation: draw 300ms 1350ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(10) {
-  animation: draw 300ms 1500ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(11) {
-  animation: draw 300ms 1650ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(12) {
-  animation: draw 300ms 1800ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(13) {
-  animation: draw 300ms 1950ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(14) {
-  animation: draw 300ms 2100ms forwards;
-}
-.container_textAnimation svg tspan > tspan:nth-of-type(15) {
-  animation: draw 300ms 2250ms forwards;
-}
-
-@keyframes draw {
-  100% {
-    stroke-dashoffset: 0;
+@keyframes pulsate {
+  0% {
+    box-shadow: 0 0 25px #F76304, 0 0 50px #FFC93A;
   }
 }
-.container_textAnimation {
-  padding: 2em;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
+@keyframes move-chevron {
+  25% {
+    opacity: 1;
+  }
+  33.3% {
+    opacity: 1;
+    transform: translateY(2.28rem);
+  }
+  66.6% {
+    opacity: 1;
+    transform: translateY(3.12rem);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(4.8rem) scale(0.5);
+  }
 }
-
-.textAnimation {
-  stroke: #57A9DA;
-  fill: #57A9DA;
-  font-family: "Fugaz One", cursive;
-  font-size: 100px;
-  font-weight: 300;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -241,26 +179,26 @@ header nav div ul li:hover {
   width: 80%;
 }
 
-.contenedor_boton_conoceMas {
+.contenedor_btn_learnMore {
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
-  width: 50%;
+  justify-content: flex-end;
 }
 
-.boton_ConoceMas {
-  color: #57A9DA;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 1em;
-  padding: 1em;
-  background-color: #E0E0E0;
-  color: #57A9DA;
-  font-weight: bold;
-}
-.boton_ConoceMas:hover {
-  background-color: #57A9DA;
+.btn_learnMore {
   color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 15px 20px;
+  border: 3px solid #E0E0E0;
+  border-radius: 10px;
+}
+.btn_learnMore:hover {
+  color: #F76304;
+  animation: pulsate 1s ease-in-out;
 }
 
 .section_servicios {
@@ -284,39 +222,60 @@ header nav div ul li:hover {
   padding: 2em;
 }
 
-.contenedor_animationScroll {
+.contenedor_animationChevron {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-
-.scroll-link {
-  position: absolute;
-  bottom: 1rem;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.mouse {
-  max-width: 1.5rem;
   width: 100%;
-  height: auto;
+  margin-top: 2em;
+  margin-bottom: 4em;
 }
 
-.scroll {
-  animation-name: scroll;
-  animation-duration: 1.5s;
-  animation-timing-function: cubic-bezier(0.65, -0.55, 0.25, 1.5);
-  animation-iteration-count: infinite;
-  transform-origin: 50% 20.5px;
-  will-change: transform;
+.container_chevron {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
 }
 
-.animationScroll_p {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #57A9DA;
-  font-size: 9px;
+.chevron {
+  position: absolute;
+  width: 2.1rem;
+  height: 0.48rem;
+  opacity: 0;
+  transform: scale(0.3);
+  animation: move-chevron 3s ease-out infinite;
+}
+
+.chevron:first-child {
+  animation: move-chevron 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+  animation: move-chevron 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  background: #57A9DA;
+}
+
+.chevron:before {
+  left: 0;
+  transform: skewY(30deg);
+}
+
+.chevron:after {
+  right: 0;
+  width: 50%;
+  transform: skewY(-30deg);
 }
 
 .section_servicios {
@@ -343,40 +302,6 @@ header nav div ul li:hover {
   flex-direction: column;
 }
 
-.index_footer {
-  width: 100vw;
-  height: 18%;
-  display: flex;
-  flex-direction: column;
-  background-color: #202124;
-}
-
-.section_copyright {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.contenedor_logo_footer {
-  width: 40%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 1em;
-}
-
-.logo_footer {
-  width: calc(5em + 5vw);
-}
-
-.texto_copyright {
-  color: #E0E0E0;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: -1.9em;
-}
-
 footer {
   background-color: #202124;
 }
@@ -394,6 +319,7 @@ footer a:hover {
   color: #57A9DA;
 }
 footer p {
+  font-family: Arial, Helvetica, sans-serif;
   color: #E0E0E0;
 }
 footer p:hover {
@@ -402,27 +328,56 @@ footer p:hover {
 
 .footer__logo {
   width: calc(5em + 5vw);
-  height: 100%;
-  margin-bottom: 1em;
+}
+
+.footer__redes {
+  display: flex;
+  flex-direction: column;
 }
 
 .socialMedia {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
 }
 
 .socialMedia_anchord {
-  width: calc(1.5em + 1.5vw);
-  height: calc(1.5em + 1.5vh);
-  margin-right: 0.4em;
-  margin-bottom: 0.3em;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+.socialMedia_anchord i, .socialMedia_anchord img {
+  background: #535558;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 32px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  transition: all 0.4s ease-in-out;
+}
+.socialMedia_anchord i:hover, .socialMedia_anchord img:hover {
+  transform: scale(1.2);
 }
 
+@media screen and (max-width: 768px) {
+  .socialMedia_anchord i, .socialMedia_anchord img {
+    margin-bottom: 1em;
+  }
+}
 @media screen and (max-width: 900px) {
-  nav {
+  header nav {
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   .center {
@@ -430,7 +385,7 @@ footer p:hover {
     top: 50%;
     right: 10%;
     transform: translate(-50%, -50%);
-    position: absolute;
+    position: relative;
     width: 40px;
   }
 
@@ -487,7 +442,7 @@ footer p:hover {
   }
 
   .anchord_secciones {
-    padding: 0.5em;
+    padding: 1em;
   }
 
   #toggler:checked ~ .contenedor_header_secciones {
@@ -497,29 +452,10 @@ footer p:hover {
 @media screen and (min-width: 768px) {
   /*Footer Media +768*/
   .footer__logo {
-    width: calc(8em + 8vw);
-    height: 100%;
-  }
-
-  .socialMedia_anchord img {
-    width: calc(1em + 1vw);
-    height: calc(1.2em + 1.2vh);
-    margin-right: 0.2em;
+    width: calc(7em + 7vw);
   }
 
   /*CIerra Footer Media +768*/
-}
-@media screen and (min-width: 1200px) {
-  .calculadora__contenedorRespuesta {
-    width: 59%;
-  }
-
-  /*Footer +1200*/
-  .socialMedia_anchord img {
-    width: calc(1.5em + 1.5vw);
-    height: calc(2em + 2vh);
-    margin-right: 0.4em;
-  }
 }
 
 /*# sourceMappingURL=main.css.map */
