--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,8 +1,12 @@
 //Tipografía
 $letra__principal: 'Fugaz One', cursive;
 $letra__secundaria: Arial, Helvetica, sans-serif;
+$letra__roboto:'Roboto Condensed', sans-serif;
 $colorLetra__Principal: #ffff;
 $colorLetra__Secundaria: orange;
+$color_naranja_cohete: #F76304;
+$color_amarillo_cohete: #FFC93A;
+$color_celeste_cohete: #00BBF0;
 //Paleta colores
 $color_gris: #535558;
 $color_gris_claro: #E0E0E0;
@@ -10,8 +14,7 @@ $color_gris_oscuro: #202124;
 $color_naranja: #F6A23E;
 $color_celeste_claro:#7EC2EC ;
 $color_celeste_oscuro: #57A9DA ;
-$color_amarillo: #57A9DA ;
-
+$color_amarillo: #FCE062 ;
 //Tamaños
 $logo-width:calc(5em + 5vw);
 //Mixins
@@ -43,7 +46,7 @@ $logo-width:calc(5em + 5vw);
     flex-direction: column;
 }
 //animaciones
-@keyframes scroll {
+@keyframes scroll{
     0%, 20% {
     transform: translateY(0) scaleY(1);
     }
@@ -55,4 +58,27 @@ $logo-width:calc(5em + 5vw);
         opacity: 0.01;
     }
 }
-
+@keyframes pulsate{
+    0%{
+        box-shadow: 0 0 25px $color_naranja_cohete,
+        0 0 50px $color_amarillo_cohete;
+    }
+}
+$base: 0.6rem;
+@keyframes move-chevron {
+    25% {
+        opacity: 1;
+        }
+    33.3% {
+        opacity: 1;
+        transform: translateY($base * 3.8);
+    }
+    66.6% {
+        opacity: 1;
+        transform: translateY($base * 5.2);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY($base * 8) scale(0.5);
+    }
+}
