--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,5 @@
 //Imports
-@import "variables", "textAnimation";
+@import "variables";
 
 *{
     margin: 0;
@@ -105,7 +105,6 @@ header{
 #toggler, .contenedor_burgerMenu, .burger_menu, .center{
     display: none;
 }
-
 //Abre main 
 .main{
     width: 100vw;
@@ -136,25 +135,25 @@ header{
     color: $color_celeste_oscuro;
     width: 80%;
 }
-.contenedor_boton_conoceMas{
+.contenedor_btn_learnMore{
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    width: 50%;
+    justify-content: flex-end;
 }
-.boton_ConoceMas{
-    color: $color_celeste_oscuro;
-    text-align: center;
+.btn_learnMore{
+    color: $color_gris_claro;
     font-family: $letra__secundaria;
-    margin: 1em;
-    padding: 1em;
-    background-color: $color_gris_claro;
-    color: $color_celeste_oscuro;
     font-weight: bold;
+    text-decoration: none;
+    padding: 15px 20px;
+    border: 3px solid $color_gris_claro;
+    border-radius: 10px;
     &:hover{
-        background-color: $color_celeste_oscuro;
-        color: $color_gris_claro; 
-    }
+        color: $color_naranja_cohete;
+        animation: pulsate 1s ease-in-out;
+    };
 }
 //servicios
 .section_servicios{
@@ -178,36 +177,55 @@ header{
     padding: 2em;
 }
 //animacion-scroll
-.contenedor_animationScroll{
+.contenedor_animationChevron{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-.scroll-link{
-    position: absolute;
-    bottom: 1rem;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.mouse{
-    max-width: 1.5rem;
     width: 100%;
-    height: auto;
+    @include margin__Espaciado(2em,4em);
 }
-.scroll {
-    animation-name: scroll;
-    animation-duration: 1.5s;
-    animation-timing-function: cubic-bezier(0.650, -0.550, 0.250, 1.500);
-    animation-iteration-count: infinite;
-    transform-origin: 50% 20.5px;
-    will-change: transform;
+//animacion chevron
+.container_chevron{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
 }
-.animationScroll_p{
-    font-family: $letra__secundaria;
-    color: $color_celeste_oscuro;
-    font-size: 9px;
+.chevron {
+    position: absolute;
+    width: $base * 3.5;
+    height: $base * 0.8;
+    opacity: 0;
+    transform: scale(0.3);
+    animation: move-chevron 3s ease-out infinite;
 }
+.chevron:first-child {
+    animation: move-chevron 3s ease-out 1s infinite;
+}
+.chevron:nth-child(2) {
+    animation: move-chevron 3s ease-out 2s infinite;
+}
+.chevron:before,
+.chevron:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    background: $color_celeste_oscuro;
+}
+.chevron:before {
+    left: 0;
+    transform: skewY(30deg);
+}
+.chevron:after {
+    right: 0;
+    width: 50%;
+    transform: skewY(-30deg);
+}
+//servicio servicios 
 .section_servicios{
     @include secciones;
 }
@@ -218,38 +236,6 @@ header{
     @include secciones;
 }
 //footer
-//pa eliminar de aca
-.index_footer{
-    width: 100vw;
-    height: 18%;
-    display: flex;
-    flex-direction: column;
-    background-color: $color_gris_oscuro;
-}
-.section_copyright{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-.contenedor_logo_footer{
-    width: 40%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 1em;
-}
-
-.logo_footer{
-    width: $logo-width
-}
-
-.texto_copyright{
-    color: $color_gris_claro;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: -1.9em;
-} //hasta aca
 footer{
     background-color: $color_gris_oscuro;
     hr{
@@ -266,6 +252,7 @@ footer{
         color: $color_celeste_oscuro;
     }
     p{
+        font-family: $letra__secundaria;
         color: $color_gris_claro;
     }
     p:hover{
@@ -274,31 +261,65 @@ footer{
 }
 .footer__logo{
     width: calc(5em + 5vw);
-    height: 100%;
-    margin-bottom: 1em;
+}
+.footer__redes{
+    display: flex;
+    flex-direction: column;
+
 }
 .socialMedia{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
 }
 .socialMedia_anchord{
-    width: calc(1.5em + 1.5vw);
-    height: calc(1.5em + 1.5vh);
-    margin-right: .4em;
-    margin-bottom: .3em;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    i,img{
+        background: $color_gris;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        line-height: 32px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+        transition: all .4s ease-in-out;
+    }
+    i:hover,img:hover {
+        transform: scale(1.2);
+    }
+}
+
+
+@media screen and (max-width: 320px){
+
+}
+@media screen and (max-width: 768px){
+    .socialMedia_anchord i, .socialMedia_anchord img{
+        margin-bottom: 1em;
+    }
 }
 @media screen and (max-width: 900px) {
-    nav{
+    header nav{
         justify-content: space-between;
+        flex-wrap: wrap;
     }
     .center {
         display: block;
         top: 50%;
         right: 10%;
         transform: translate(-50%, -50%);
-        position: absolute;
+        position: relative;
         width: 40px;
     }    
     .center:before,
@@ -346,7 +367,7 @@ footer{
         display: flex;
     }
     .anchord_secciones{
-        padding: .5em;
+        padding: 1em;
     }
     #toggler:checked ~ .contenedor_header_secciones{
         max-height: 100%;
@@ -355,24 +376,10 @@ footer{
 @media screen and (min-width: 768px){
     /*Footer Media +768*/ 
     .footer__logo{
-        width: calc(8em + 8vw);
-        height: 100%;
-    }
-    .socialMedia_anchord img{
-        width: calc(1em + 1vw);
-        height: calc(1.2em + 1.2vh);
-        margin-right: .2em;
+        width: calc(7em + 7vw);
     }
     /*CIerra Footer Media +768*/
 }
 @media screen and (min-width: 1200px){
-    .calculadora__contenedorRespuesta{
-        width: 59%;
-    }
-    /*Footer +1200*/
-    .socialMedia_anchord img{
-        width: calc(1.5em + 1.5vw);
-        height: calc(2em + 2vh);
-        margin-right: .4em;
-    } 
+
 }
