--- a/CSS/main.css
+++ b/CSS/main.css
@@ -32,196 +32,6 @@
     transform: translateY(4.8rem) scale(0.5);
   }
 }
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Fugaz One", cursive;
-  font-display: swap;
-  width: 100vw;
-  height: 100%;
-  box-sizing: border-box;
-  background-color: #535558;
-}
-
-.header_hidden {
-  display: none;
-}
-
-.navbar {
-  flex-wrap: nowrap;
-}
-
-header {
-  width: 100vw;
-  height: 2%;
-  clear: both;
-  content: "";
-  position: sticky;
-  top: 0;
-  z-index: 45;
-}
-header nav {
-  background-color: #202124;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: 100%;
-  justify-content: space-evenly;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  width: 100%;
-}
-header nav div ul {
-  width: 70%;
-  display: flex;
-  justify-content: space-evenly;
-  list-style: none;
-}
-header nav div ul li {
-  display: flex;
-  align-items: center;
-  color: #E0E0E0;
-}
-header nav div ul li a {
-  text-decoration: none;
-  color: inherit;
-}
-header nav div ul li:hover {
-  color: #57A9DA;
-}
-
-.contenedor_preload {
-  position: absolute;
-  width: 100%;
-  min-height: 100%;
-  background: #202124;
-  z-index: 99;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.preload_cerrar {
-  display: none;
-  transform: translateY(-100%);
-  transition: all 0.5s;
-}
-
-.preload {
-  width: 100vw;
-  height: 100vh;
-}
-
-.contenedor_logo_header {
-  width: 40%;
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 2em;
-  padding: 1em;
-}
-
-.anchord_logo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.logo_header {
-  width: calc(5em + 5vw);
-}
-
-.contenedor_header_secciones {
-  width: 60%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-#toggler, .contenedor_burgerMenu, .burger_menu, .center {
-  display: none;
-}
-
-.main {
-  width: 100vw;
-  height: 80%;
-}
-
-.section_presentacion {
-  width: 100vw;
-  display: none;
-}
-
-.contenedor_presentacion {
-  width: 100%;
-  background-color: inherit;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 2em;
-}
-
-.contenedor_presentacion_h1 {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 20px;
-}
-
-.presentacion_h1 {
-  color: #57A9DA;
-  width: 80%;
-}
-
-.contenedor_btn_learnMore {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.btn_learnMore {
-  color: #E0E0E0;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 15px 20px;
-  border: 3px solid #E0E0E0;
-  border-radius: 10px;
-}
-.btn_learnMore:hover {
-  color: #F76304;
-  animation: pulsate 1s ease-in-out;
-}
-
-.section_servicios {
-  display: none;
-}
-
-.contenedor_somosImpulsar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  padding: 2em;
-}
-
-.somosImpulsar_p {
-  width: 80%;
-  color: #E0E0E0;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  text-align: justify;
-  padding: 2em;
-}
-
 .contenedor_animationChevron {
   display: flex;
   justify-content: center;
@@ -278,12 +88,232 @@ header nav div ul li:hover {
   transform: skewY(-30deg);
 }
 
+.contenedor_preload {
+  position: absolute;
+  width: 100%;
+  min-height: 100%;
+  background: #202124;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.preload_cerrar {
+  display: none;
+  transform: translateY(-100%);
+  transition: all 0.5s;
+}
+
+.preload {
+  width: 100vw;
+  height: 100vh;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Fugaz One", cursive;
+  font-display: swap;
+  box-sizing: border-box;
+  background-color: #535558;
+}
+
+.navbar {
+  flex-wrap: nowrap;
+}
+
+header {
+  width: 100%;
+  clear: both;
+  content: "";
+  position: sticky;
+  top: 0;
+  z-index: 45;
+}
+header nav {
+  background-color: #202124;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  justify-content: space-evenly;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  width: 100%;
+}
+header nav div ul {
+  width: 70%;
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+header nav div ul li {
+  display: flex;
+  align-items: center;
+  color: #E0E0E0;
+}
+header nav div ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+header nav div ul li:hover {
+  color: #57A9DA;
+}
+
+.contenedor_logo_header {
+  width: 40%;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 2em;
+  padding: 1em;
+}
+
+.anchord_logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo_header {
+  width: calc(5em + 5vw);
+}
+
+.contenedor_header_secciones {
+  width: 60%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#toggler, .contenedor_burgerMenu, .burger_menu, .center {
+  display: none;
+}
+
+.main {
+  width: 100%;
+}
+
+.section_presentacion {
+  width: 100%;
+  display: flex;
+}
+.section_presentacion .contenedor_presentacion {
+  width: 100%;
+  background-color: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2em;
+}
+.section_presentacion .contenedor_presentacion .contenedor_presentacion_h1 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 20px;
+}
+.section_presentacion .contenedor_presentacion .contenedor_presentacion_h1 .presentacion_h1 {
+  color: #57A9DA;
+  width: 80%;
+}
+.section_presentacion .contenedor_btn_learnMore {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+.section_presentacion .contenedor_btn_learnMore .btn_learnMore {
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 15px 20px;
+  border: 3px solid #E0E0E0;
+  border-radius: 10px;
+}
+.section_presentacion .contenedor_btn_learnMore .btn_learnMore:hover {
+  color: #F76304;
+  animation: pulsate 1s ease-in-out;
+}
+
+.section_servicios {
+  display: none;
+}
+
 .section_servicios {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   flex-direction: column;
+}
+.section_servicios .container_content_impulso {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  height: 30%;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_servicios .container_content_impulso .contenedor_impulso_img {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  max-width: 10rem;
+  max-height: 10rem;
+  overflow: hidden;
+}
+.section_servicios .container_content_impulso .contenedor_impulso_img .img_impulso {
+  width: 100%;
+  height: 100%;
+  -moz-transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.section_servicios .container_content_impulso .contenedor_impulso_img .img_impulso:hover {
+  -webkit-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.section_servicios .container_content_impulso .container_impulso_speach {
+  width: 70%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.section_servicios .container_content_impulso .container_impulso_speach .impulso_title {
+  text-align: left;
+  font-family: "Fugaz One", cursive;
+  color: #F76304;
+  width: 100%;
+}
+.section_servicios .container_content_impulso .container_impulso_speach .impulso_paragraph {
+  text-align: end;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .section_somosImpulsar {
@@ -325,17 +355,14 @@ footer p {
 footer p:hover {
   color: #57A9DA;
 }
-
-.footer__logo {
+footer .footer__logo {
   width: calc(5em + 5vw);
 }
-
-.footer__redes {
+footer .footer__redes {
   display: flex;
   flex-direction: column;
 }
-
-.socialMedia {
+footer .socialMedia {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -343,8 +370,7 @@ footer p:hover {
   width: 100%;
   height: 100%;
 }
-
-.socialMedia_anchord {
+footer .socialMedia_anchord {
   width: 100%;
   height: 20%;
   display: flex;
@@ -352,7 +378,7 @@ footer p:hover {
   align-items: center;
   font-size: 20px;
 }
-.socialMedia_anchord i, .socialMedia_anchord img {
+footer .socialMedia_anchord i, footer .socialMedia_anchord img {
   background: #535558;
   border-radius: 50%;
   width: 30px;
@@ -365,7 +391,7 @@ footer p:hover {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   transition: all 0.4s ease-in-out;
 }
-.socialMedia_anchord i:hover, .socialMedia_anchord img:hover {
+footer .socialMedia_anchord i:hover, footer .socialMedia_anchord img:hover {
   transform: scale(1.2);
 }
 
