--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,6 +1,5 @@
 //Imports
-@import "variables";
-
+@import "variables", "chevron", "preload";
 *{
     margin: 0;
     padding: 0;
@@ -9,21 +8,15 @@
 body{
     font-family: 'Fugaz One', cursive;
     font-display: swap;
-    width: 100vw;
-    height: 100%;
     box-sizing: border-box;
     background-color: $color_gris;
 }
 //Index
-.header_hidden{
-    display: none;
-}
 .navbar{
     flex-wrap: nowrap;
 }
 header{
-    width: 100vw;
-    height: 2%;
+    width: 100%;
     clear: both;
     content:'';
     position: sticky;
@@ -61,26 +54,6 @@ header{
         }
     }
 }
-//preload
-.contenedor_preload{
-    position: absolute;
-    width: 100%;
-    min-height: 100%;
-    background: $color_gris_oscuro;
-    z-index: 99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.preload_cerrar{
-    display: none;
-    transform: translateY(-100%);
-    transition: all .5s;
-}
-.preload{
-    width: 100vw;
-    height: 100vh;
-}
 //logo header
 .contenedor_logo_header{
     width: 40%;
@@ -107,127 +80,116 @@ header{
 }
 //Abre main 
 .main{
-    width: 100vw;
-    height: 80%;
+    width: 100%;
 }
 //abre seccion presentacion
 .section_presentacion{
-    width: 100vw;
-    display: none;
-}
-.contenedor_presentacion{
     width: 100%;
-    background-color: inherit;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 2em;
-}
-.contenedor_presentacion_h1{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 20px;
-}
-.presentacion_h1{
-    color: $color_celeste_oscuro;
-    width: 80%;
-}
-.contenedor_btn_learnMore{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-.btn_learnMore{
-    color: $color_gris_claro;
-    font-family: $letra__secundaria;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 15px 20px;
-    border: 3px solid $color_gris_claro;
-    border-radius: 10px;
-    &:hover{
-        color: $color_naranja_cohete;
-        animation: pulsate 1s ease-in-out;
-    };
+    .contenedor_presentacion{
+        width: 100%;
+        background-color: inherit;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2em;
+        .contenedor_presentacion_h1{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            justify-content: flex-start;
+            align-items: center;
+            font-size: 20px;
+            .presentacion_h1{
+                color: $color_celeste_oscuro;
+                width: 80%;
+            }
+        }
+    }
+    .contenedor_btn_learnMore{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        .btn_learnMore{
+            color: $color_gris_claro;
+            font-family: $letra__secundaria;
+            font-weight: bold;
+            text-decoration: none;
+            padding: 15px 20px;
+            border: 3px solid $color_gris_claro;
+            border-radius: 10px;
+            &:hover{
+                color: $color_naranja_cohete;
+                animation: pulsate 1s ease-in-out;
+            };
+        }
+    
+    }
 }
 //servicios
 .section_servicios{
     display: none;
 }
-
-//somos impulsar
-.contenedor_somosImpulsar{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    padding: 2em;
-}
-.somosImpulsar_p{
-    width: 80%;
-    color: $color_gris_claro;
-    font-family: $letra__secundaria;
-    font-size: 20px;
-    text-align: justify;
-    padding: 2em;
-}
-//animacion-scroll
-.contenedor_animationChevron{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    @include margin__Espaciado(2em,4em);
-}
-//animacion chevron
-.container_chevron{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-}
-.chevron {
-    position: absolute;
-    width: $base * 3.5;
-    height: $base * 0.8;
-    opacity: 0;
-    transform: scale(0.3);
-    animation: move-chevron 3s ease-out infinite;
-}
-.chevron:first-child {
-    animation: move-chevron 3s ease-out 1s infinite;
-}
-.chevron:nth-child(2) {
-    animation: move-chevron 3s ease-out 2s infinite;
-}
-.chevron:before,
-.chevron:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 50%;
-    background: $color_celeste_oscuro;
-}
-.chevron:before {
-    left: 0;
-    transform: skewY(30deg);
-}
-.chevron:after {
-    right: 0;
-    width: 50%;
-    transform: skewY(-30deg);
-}
 //servicio servicios 
 .section_servicios{
     @include secciones;
+    .container_content_impulso{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 60%;
+        height: 30%;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        @include margin__Espaciado(1em,1em);
+        .contenedor_impulso_img{
+            width: 30%;
+            height: 100%;
+            @include flex__Center;
+            max-width: 10rem;
+            max-height: 10rem;
+            overflow: hidden;
+            .img_impulso{
+                width: 100%;
+                height: 100%;
+                -moz-transition: all 500ms ease;
+                -webkit-transition: all 500ms ease;
+                -o-transition: all 500ms ease;
+                transition: all 500ms ease;
+                &:hover{
+                    -webkit-transform: scale(1.2);
+                    -o-transform: scale(1.2);
+                    -moz-transform: scale(1.2);
+                    transform: scale(1.2);
+                }
+            } 
+        }   
+        .container_impulso_speach{
+            width: 70%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .impulso_title{
+                text-align: left;
+                font-family: $letra__principal;
+                color: $color_naranja_cohete;
+                width: 100%;
+            }
+            .impulso_paragraph{
+                text-align: end;
+                color: $color_gris_claro;
+                font-family: $letra__secundaria;
+                width: 100%;
+                @include margin__Espaciado(1em,1em);
+            }
+        }
+    }
 }
 .section_somosImpulsar{
     @include secciones;
@@ -258,48 +220,47 @@ footer{
     p:hover{
         color: $color_celeste_oscuro;
     }
-}
-.footer__logo{
-    width: calc(5em + 5vw);
-}
-.footer__redes{
-    display: flex;
-    flex-direction: column;
-
-}
-.socialMedia{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 100%;
-}
-.socialMedia_anchord{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    i,img{
-        background: $color_gris;
-        border-radius: 50%;
-        width: 30px;
-        height: 30px;
-        text-align: center;
-        line-height: 32px;
+    .footer__logo{
+        width: calc(5em + 5vw);
+    }
+    .footer__redes{
+        display: flex;
+        flex-direction: column;
+    
+    }
+    .socialMedia{
+        display: flex;
+        flex-direction: column;
         align-items: center;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 100%;
+    }
+    .socialMedia_anchord{
+        width: 100%;
+        height: 20%;
         display: flex;
         justify-content: center;
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
-        transition: all .4s ease-in-out;
-    }
-    i:hover,img:hover {
-        transform: scale(1.2);
+        align-items: center;
+        font-size: 20px;
+        i,img{
+            background: $color_gris;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+            line-height: 32px;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+            transition: all .4s ease-in-out;
+        }
+        i:hover,img:hover {
+            transform: scale(1.2);
+        }
     }
 }
-
 
 @media screen and (max-width: 320px){
 
